--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#16a085">
+		<!--[if IE]> <link rel="stylesheet" type="text/css" href="/styling-testing/css/ie.css" /> <![endif]-->
 		
 		<!-- Preconnect -->
 		<link rel="dns-prefetch" href="https://simpleicons.org/">
