--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 		
 		<!-- Metadata -->
 		<meta http-equiv="Content-Type" content="text/html; charset=ANSI"> <!-- ANSI contains way more characters than UTF-8 -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#16a085">
-		<!--[if IE]> <link rel="stylesheet" type="text/css" href="/styling-testing/css/ie.css" /> <![endif]-->
+		<!--[if IE]>
+			<link rel="stylesheet" type="text/css" href="/styling-testing/css/ie.css" />
+		<![endif]-->
 		
 		<!-- Preconnect -->
 		<link rel="dns-prefetch" href="https://simpleicons.org/">
@@ -26,6 +28,11 @@
 		<link rel="stylesheet" href="/styling-testing/fonts/OpenSans.css">
 		<link as="style" href="/styling-testing/libraries/fontawesome/css/all.min.css" importance="high" rel="preload">
 		<link rel="stylesheet" href="/styling-testing/libraries/fontawesome/css/all.min.css">
+		<style>
+			[style~="display: flex;"] {
+				content: "Flexboxes are not supported";
+			}
+		</style>
 		
 		<!-- Icons -->
 		<link crossorigin="anonymous" media="all" integrity="sha512-pzLLd+y0cUrg6/n1a67KmWv/uHfZjRb2CETGxgLYah0aKp/yXtpL7+TC1ksnN3C1mtMGRo+UGGHxYrNhMDGOmg==" rel="alternate icon" type="image/png" href="/styling-testing/favicons/favicon.png">
