--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
+<!--[if IE 7 ]>		 <html class="no-js ie ie7 lte7 lte8 lte9"> lang="en-US"> <![endif]-->
+<!--[if IE 8 ]>		 <html class="no-js ie ie8 lte8 lte9"> lang="en-US"> <![endif]-->
+<!--[if IE 9 ]>		 <html class="no-js ie ie9 lte9"> lang="en-US"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!-->
 <html lang="en-US" dir="auto">
+	<!--<![endif]-->
 	<head>
 		<title>Styling Testing</title>
 		
@@ -8,9 +13,6 @@
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#16a085">
-		<!--[if IE]>
-			<link rel="stylesheet" type="text/css" href="/styling-testing/css/ie.css" />
-		<![endif]-->
 		
 		<!-- Preconnect -->
 		<link rel="dns-prefetch" href="https://simpleicons.org/">
