--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#16a085">
 		
-		<!-- Prefetch -->
+		<!-- DNS Prefetch -->
 		<link rel="dns-prefetch" href="https://jigsaw.w3.org/">
 		<link rel="dns-prefetch" href="https://simpleicons.org/">
 		<link rel="dns-prefetch" href="https://fonts.gstatic.com/">
