--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									</td>
 									<td>
 										<p>
-											<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fhoidberg.github.io%2Fstyling-testing%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=">
+											<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fhoidberg.github.io%2Fstyling-testing%2F&profile=css3svg&usermedium=all&warning=1&vextwarning="> <!-- Woohoo! I'm verified! -->
 												<img style="border:0;width:88px;height:31px"
 												 src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
 												alt="Valid CSS!" />
