--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				</div>
 			</div>
 			<br>
-			<div id="code1" class="w3-code w3-text-black" style="word-break: break-word; word-wrap: break-word; white-space: pre-wrap;">Loading...</div>
+			<div id="code1" class="w3-code w3-text-black" style="word-break: break-word; word-wrap: break-word; white-space: pre-wrap;">If you see this message for longer than 2 seconds please reload</div>
 		</div>
 		
 		<!-- Scripts -->
