--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@
 		<script type="text/javascript" src="https://www.w3schools.com/lib/w3codecolor.js"></script>
 		<script type="text/javascript" src="/styling-testing/js/script.js"></script>
 		<script type="text/javascript" src="/styling-testing/js/mobile.js"></script>
+		<script>
+			var j = jQuery.noConflict();
+			j.get("https://raw.githubusercontent.com/Hoidberg/styling-testing/main/js/script.js", function(n,i) {
+				j("#code1").text(n);
+			});
+			w3CodeColor();
+		</script>
 		<script async="">!function(e,a,t,n,c,o,s){e.GoogleAnalyticsObject=c,e[c]=e[c]||function(){(e[c].q=e[c].q||[]).push(arguments)},e[c].l=1*new Date,o=a.createElement(t),s=a.getElementsByTagName(t)[0],o.async=1,o.src=n,s.parentNode.insertBefore(o,s)}(window,document,"script","//www.google-analytics.com/analytics.js","ga"),ga("create","UA-3764464-7","auto"),ga("send","pageview");</script>
 	</body>
 </html>
